Knife Select operator needs disabled when no faces are selected #37571

Closed
opened 2013-11-21 17:26:46 +01:00 by Jonathan Williamson · 10 comments

Problem
The Knife Select operator only works on faces, not edges. But you can still activate the operator while nothing or only edges are selected. This leaves the user wondering why they can't make any cuts, making it feel like a broken tool

Proposal
Disable operator unless one or more faces are selected.

**Problem** The Knife Select operator only works on faces, not edges. But you can still activate the operator while nothing or only edges are selected. This leaves the user wondering why they can't make any cuts, making it feel like a broken tool **Proposal** Disable operator unless one or more faces are selected.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscribers: @JonathanWilliamson, @(Deleted), @AndyDavies-3

Added subscribers: @JonathanWilliamson, @(Deleted), @AndyDavies-3

I don't have a problem with this change really.
As long as I don't actually have to go into face mode to use the tool and will still be able to select a face via vert. selection that I'm happy. Maybe adding a error message saying that a face needs to be selected would help too?

I don't have a problem with this change really. As long as I don't actually have to go into face mode to use the tool and will still be able to select a face via vert. selection that I'm happy. Maybe adding a error message saying that a face needs to be selected would help too?

Added subscriber: @ideasman42
Removed subscriber: @(Deleted)

Added subscriber: @ideasman42 Removed subscriber: @(Deleted)
Author
Member

@AndyDavies-3, you should definitely still be able to use it from any selection mode. Maybe I wasn't clear in my initial description, but currently the Knife Select doesn't work if there are no faces selected. You can't make cuts.

@AndyDavies-3, you should definitely still be able to use it from any selection mode. Maybe I wasn't clear in my initial description, but currently the Knife Select doesn't work if there are no faces selected. You can't make cuts.

Ahh no, you were perfectly clear. I just wanted to make sure that I was too. :)

Ahh no, you were perfectly clear. I just wanted to make sure that I was too. :)
Author
Member

Ah yep, all good then :)

Ah yep, all good then :)
Campbell Barton self-assigned this 2013-11-25 22:32:33 +01:00

Bisect also suffers from this. will check on fix.

Bisect also suffers from this. will check on fix.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

fixed 84334bde01 closing

fixed 84334bde01 closing
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37571
No description provided.