Fix 37571: Knife Select should be disabled when no faces are selected

also check a similar case for bisect